--- a/pages/follows/follows-home/follows-home.wxss
+++ b/pages/follows/follows-home/follows-home.wxss
@@ -39,23 +39,28 @@
 
 .org-wrap .org-list  {
   margin-left: 15rpx;
-  display: inline-flex;
+  /* display: inline-flex; */
+  display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: flex-start;
+  overflow-x: scroll;
 
 }
 
-.org-wrap .org-list image  {
-  border-radius: 50%;
-}
 
 .org-wrap .org-item {
   display: block;
   height: 144rpx;
   width: 156rpx;
   margin-right: 18rpx;
+  flex-shrink: 0;
 }
+
+.org-wrap .org-item image  {
+  border-radius: 50%;
+}
+
 
 .org-wrap .org-item .org-avator {
   display: block;
