--- a/pages/sections/act-detail/act-detail.wxml
+++ b/pages/sections/act-detail/act-detail.wxml
@@ -39,7 +39,7 @@
 
 
 <!--评论区-->
-<view class="comment-block">
+<!-- <view class="comment-block">
   <text class="title">评论区</text>
   <scroll-view scroll-y="true" class="nav">
     <view class="comment-item" wx:for="{{comment_list}}">
@@ -50,10 +50,26 @@
       <view class="comment">
         <text class="words">{{item.content}}</text>
         <text class="words">打分：{{item.score}}</text>
-        <image class="like" src="{{likeUrl}}" bindtap='like'></image>
-        <button class="reply" bindtap="reply">回复</button>
+        <image class="like-icon" src="{{likeUrl}}" bindtap='like'></image>
       </view>
-    </view>
+    </view> -->
     <!-- TODO：需要新建/修改评论；需要在上面显示平均打分 -->
+  <!-- </scroll-view>
+</view> -->
+
+<view class="msg-wrap">
+  <scroll-view scroll-y="true" class="nav">
+    <view class="msg-item" wx:for="{{comment_list}}">
+      <i-card i-class="card-demo" title="{{item.user.name}}" extra="{{item.publish_time}}" thumb="{{item.user.avator}}">
+        <view slot="content">
+          <view>{{item.content}}</view>
+          <view>
+          <van-rate custom-class="rate" model:value="{{ item.rate }}" size="{{ 25 }}"
+           readonly allow-half color="#ee0a24" void-color="#eee" void-icon="star"/>
+          </view>
+        </view>
+      </i-card>
+    </view>
   </scroll-view>
 </view>
+
