--- a/pages/sections/act-detail/act-detail.wxml
+++ b/pages/sections/act-detail/act-detail.wxml
@@ -15,24 +15,24 @@
 <!--活动信息-->
 <view class="msg-item">
     <i-card i-class="card-demo card-demo-full"  full
-      title="{{actInfo.owner.name}}" extra="发布者信息" thumb="/icon/sample.png">  
+      title="{{actInfo.owner.name}}" extra="发布者" thumb="/icon/sample.png">  
       <view slot="content">
         <view class="organizer"><span class="_infor_head">发布时间：</span>{{actInfo.pub_time}}</view>
-        <view wx:if="{{actInfo.org != null}}"><span class="_infor_head">所属组织：</span>{{actInfo.org.name}}</view>
-        <view wx:if="{{actInfo.block != null}}"><span class="_infor_head">所属版块：</span>{{actInfo.block.name}}</view>
+        <view class="organizer" wx:if="{{actInfo.org != null}}"><span class="_infor_head">所属组织：</span>{{actInfo.org.name}}</view>
+        <view class="organizer" wx:if="{{actInfo.block != null}}"><span class="_infor_head">所属版块：</span>{{actInfo.block.name}}</view>
 
-        <view class="act_time"><span class="_infor_head">进行时间：</span> {{actInfo.begin_time !== null ? actInfo.begin_time : "暂无信息"}} 至 {{actInfo.end_time !== null ? actInfo.end_time : "暂无信息"}}</view>
-        <view class="place"><span class="_infor_head">地点：</span> {{actInfo.location !== null ? actInfo.location.name : "暂无信息"}}</view>
-        <view class="count"><span class="_infor_head">人数：</span>{{currentNumPeople}} / {{actInfo.contain}}</view>
+        <view class="organizer"><span class="_infor_head">进行时间：</span> {{actInfo.begin_time !== null ? actInfo.begin_time : "暂无信息"}} 至 {{actInfo.end_time !== null ? actInfo.end_time : "暂无信息"}}</view>
+        <view class="organizer"><span class="_infor_head">地点：</span> {{actInfo.location !== null ? actInfo.location.name : "暂无信息"}}</view>
+        <view class="organizer"><span class="_infor_head">人数：</span>{{currentNumPeople}} / {{actInfo.contain}}</view>
 
-        <view class="body"><span class="_infor_head">活动类型：</span>{{actInfo.type.name}}</view>
-        <view class="body"><span class="_infor_head">活动描述：</span>{{actInfo.description == "" ? "无" : actInfo.description}}</view>
+        <view class="organizer"><span class="_infor_head">活动类型：</span>{{actInfo.type.name}}</view>
+        <view class="organizer"><span class="_infor_head">活动描述：</span>{{actInfo.description == "" ? "无" : actInfo.description}}</view>
         <view class="organizer"><span class="_infor_head">加入需要审核：</span>{{actInfo.review ? "是": "否"}}</view>
       </view>
       <view wx:if="isManager" slot="footer">
         <view class="bottom-right" bind:tap="editAct">
                   <image class="arrow" src="/icon/rightArrow.png"></image>
-                  <text class="txt">编辑</text>
+                  <text class="txt" style="font-size: 35rpx;"> 编辑</text>
         </view>
       </view>
     </i-card>
