--- a/pages/sections/act-detail/new-comment/new-comment.wxml
+++ b/pages/sections/act-detail/new-comment/new-comment.wxml
@@ -1,2 +1,23 @@
 <!--pages/sections/act-detail/new-comment/new-comment.wxml-->
-<text>pages/sections/act-detail/new-comment/new-comment.wxml</text>
+
+
+<view class="weui-cells weui-cells_form">
+  <view class="weui-cell">
+      <view class="weui-cell__bd">
+        <textarea class="weui-textarea" bindblur="bindTextAreaBlur"  rows="3"
+          placeholder="请输入评论" placeholder-class="weui-input__placeholder" maxlength="{{10000}}" />
+          <!-- <view class="weui-textarea-counter"><span>0</span>/200</view> -->
+      </view>
+  </view>
+</view>
+
+<view class="rate-wrap">
+  <view class="txt">评分</view>
+  <van-rate custom-class="rate" model:value="{{ rate}}" bind:change="onChange" size="{{ 25 }}"
+  allow-half void-icon="star"/>
+</view>
+
+
+<a class="weui-btn weui-btn_primary" bindtap="submitOrg">提交</a>
+
+
