--- a/pages/sections/act-detail/act-detail.wxml
+++ b/pages/sections/act-detail/act-detail.wxml
@@ -29,7 +29,7 @@
         <view class="organizer"><span class="_infor_head">活动描述：</span>{{actInfo.description == "" ? "无" : actInfo.description}}</view>
         <view class="organizer"><span class="_infor_head">加入需要审核：</span>{{actInfo.review ? "是": "否"}}</view>
       </view>
-      <view wx:if="isManager" slot="footer">
+      <view wx:if="{{isManager}}" slot="footer">
         <view class="bottom-right" bind:tap="editAct">
                   <image class="arrow" src="/icon/rightArrow.png"></image>
                   <text class="txt" style="font-size: 35rpx;"> 编辑</text>
@@ -57,9 +57,19 @@
           <view>{{item.content}}</view>
           <view>
           <van-rate custom-class="rate" model:value="{{ item.score }}" size="{{ 25 }}"
-           readonly allow-half color="#ee0a24" void-color="#eee" void-icon="star"/>
+           readonly allow-half/>
           </view>
         </view>
+        <view wx:if="{{item.user.id == userId}}" slot="footer">
+          <view class="bottom-right" bind:tap="goEditComment" data-comment-id="{{item.id}}">
+            <i-icon type="editor" />
+            <text class="txt" style="font-size: 35rpx;"> 编辑</text>
+          </view>
+          <view class="bottom-right" bind:tap="delComment" data-comment-id="{{item.id}}">
+            <i-icon type="delete" />
+            <text class="txt" style="font-size: 35rpx;"> 删除</text>
+        </view>
+      </view>
       </i-card>
     </view>
   </scroll-view>
