--- a/pages/index/recommend/recommend.wxss
+++ b/pages/index/recommend/recommend.wxss
@@ -1,1 +1,149 @@
 /* pages/index/recommend.wxss */
+
+.org-wrap {
+  margin-top: 10rpx;
+  margin-bottom: 10rpx;
+  background: #fff;
+}
+
+.org-wrap .header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 90rpx;
+  padding: 0 30rpx;
+}
+
+.org-wrap .header .txt {
+  color: #333;
+  font-size: 32rpx;
+  font-weight: 500;
+}
+
+.org-wrap .header .right {
+  display: flex;
+  align-items: center;
+}
+
+.org-wrap .header .all {
+  color: #666;
+  font-size: 25rpx;
+  margin-right: 10rpx;
+}
+
+.org-wrap .header .arrow {
+  width: 13rpx;
+  height: 25rpx;
+}
+
+
+.org-wrap .org-list  {
+  margin-left: 15rpx;
+  /* display: inline-flex; */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  overflow-x: scroll;
+
+}
+
+
+.org-wrap .org-item {
+  display: block;
+  height: 144rpx;
+  width: 156rpx;
+  margin-right: 18rpx;
+  flex-shrink: 0;
+}
+
+.org-wrap .org-item image  {
+  border-radius: 50%;
+}
+
+
+.org-wrap .org-item .org-avator {
+  display: block;
+  height: 101rpx;
+  width: 101rpx;
+  margin: auto;
+}
+
+.org-wrap .org-item .org-name {
+  display: block;
+  text-align: center;
+  font-size: 24rpx;
+  color: #666;
+  height: 43rpx;
+  width: 156rpx;
+  overflow:hidden;
+}
+
+/*******************************************************/
+.act-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 90rpx;
+  padding: 0 30rpx;
+}
+
+.act-header .txt {
+  color: #333;
+  font-size: 32rpx;
+  font-weight: 500;
+}
+
+.card-demo image {
+  border-radius: 50%;
+}
+
+.msg-item {
+  display: block;
+  margin-top: 20rpx;
+  /* background: #fff; */
+}
+
+
+.msg-item  .title {
+  margin-bottom: 15rpx;
+}
+
+.msg-item ._infor_head {
+  color: rgb(0, 174, 255);
+}
+
+.msg-item .org_time {
+  display: block;
+  color: #999;
+  font-size: 24rpx;
+  font-weight: 500;
+}
+
+.msg-item  .place {
+  display: block;
+  color: #999;
+  font-size: 24rpx;
+  font-weight: 500;
+}
+
+.msg-item .body {
+  font-size: 26rpx;
+}
+
+.msg-item .bottom-right {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.msg-item .bottom-right .txt {
+  color: #666;
+  font-size: 25rpx;
+  margin-right: 10rpx;
+}
+
+.msg-item .bottom-right .arrow {
+  width: 13rpx;
+  height: 25rpx;
+} 
