--- a/pages/sections/act-detail/new-comment/new-comment.wxml
+++ b/pages/sections/act-detail/new-comment/new-comment.wxml
@@ -13,7 +13,7 @@
 
 <view class="rate-wrap">
   <view class="txt">评分</view>
-  <van-rate custom-class="rate" model:value="{{ rate}}" bind:change="onChange" size="{{ 25 }}" void-icon="star"/>
+  <van-rate custom-class="rate" model:value="{{ rate}}" bind:change="onChange" size="{{ 25 }}" allow-half void-icon="star"/>
 </view>
 
 
