--- a/pages/sections/act-detail/act-detail.wxml
+++ b/pages/sections/act-detail/act-detail.wxml
@@ -28,12 +28,18 @@
         <view class="organizer"><span class="_infor_head">活动类型：</span>{{actInfo.type.name}}</view>
         <view class="organizer"><span class="_infor_head">活动描述：</span>{{actInfo.description == "" ? "无" : actInfo.description}}</view>
         <view class="organizer"><span class="_infor_head">加入需要审核：</span>{{actInfo.review ? "是": "否"}}</view>
+        <view class="organizer"><span class="_infor_head">平均评分：</span><van-rate custom-class="rate" model:value="{{ avg_score }}" size="{{ 20 }}"/> </view>
       </view>
       <view wx:if="{{isManager}}" slot="footer">
+        <view class="bottom-right" bind:tap="goParticipants">
+                  <image class="arrow" src="/icon/rightArrow.png"></image>
+                  <text class="txt" style="font-size: 35rpx;"> 查看参与者</text>
+        </view>
         <view class="bottom-right" bind:tap="editAct">
                   <image class="arrow" src="/icon/rightArrow.png"></image>
                   <text class="txt" style="font-size: 35rpx;"> 编辑</text>
         </view>
+        
       </view>
     </i-card>
 </view>
@@ -56,7 +62,7 @@
         <view slot="content">
           <view>{{item.content}}</view>
           <view>
-          <van-rate custom-class="rate" model:value="{{ item.score }}" size="{{ 25 }}"
+          <van-rate custom-class="rate" model:value="{{ item.score }}" size="{{ 20 }}"
            readonly allow-half/>
           </view>
         </view>
