--- a/pages/sections/act-detail/act-detail.wxss
+++ b/pages/sections/act-detail/act-detail.wxss
@@ -128,6 +128,17 @@
   margin-right: 10rpx;
 }
 
+.msg-item .bottom-right2 .txt {
+  color: #666;
+  font-size: 25rpx;
+  margin-right: 50rpx;
+}
+
+.msg-item .bottom-right2 .arrow {
+  width: 20rpx;
+  height: 30rpx;
+} 
+
 .msg-item .bottom-right .arrow {
   width: 20rpx;
   height: 30rpx;
