--- a/pages/sections/act-list/act-list.wxss
+++ b/pages/sections/act-list/act-list.wxss
@@ -84,3 +84,45 @@
   height: 80rpx;
   width: 80rpx;
 }
+
+.mem-wrap .mem-list  {
+  margin-left: 15rpx;
+  /* display: inline-flex; */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  overflow-x: scroll;
+
+}
+
+
+.mem-wrap .mem-item {
+  display: block;
+  height: 144rpx;
+  width: 156rpx;
+  margin-right: 18rpx;
+  flex-shrink: 0;
+}
+
+.mem-wrap .mem-item image  {
+  border-radius: 50%;
+}
+
+
+.mem-wrap .mem-item .mem-avator {
+  display: block;
+  height: 101rpx;
+  width: 101rpx;
+  margin: auto;
+}
+
+.mem-wrap .mem-item .mem-name {
+  display: block;
+  text-align: center;
+  font-size: 24rpx;
+  color: #666;
+  height: 43rpx;
+  width: 156rpx;
+  overflow:hidden;
+}
