--- a/pages/sections/act-detail/act-detail.wxml
+++ b/pages/sections/act-detail/act-detail.wxml
@@ -22,12 +22,14 @@
         <view class="organizer" wx:if="{{actInfo.block != null}}"><span class="_infor_head">所属版块：</span>{{actInfo.block.name}}</view>
 
         <view class="organizer"><span class="_infor_head">进行时间：</span> {{actInfo.begin_time !== null ? actInfo.begin_time : "暂无信息"}} 至 {{actInfo.end_time !== null ? actInfo.end_time : "暂无信息"}}</view>
-        <view class="organizer"><span class="_infor_head">地点：</span> {{actInfo.location !== null ? actInfo.location.name : "暂无信息"}}</view>
+        <!-- TODO -->
+        <!-- <view class="organizer"><span class="_infor_head">地点：</span> {{actInfo.location !== null ? actInfo.location.name : "暂无信息"}}</view> -->
         <view class="organizer"><span class="_infor_head">人数：</span>{{currentNumPeople}} / {{actInfo.contain}}</view>
 
-        <view class="organizer"><span class="_infor_head">活动类型：</span>{{actInfo.type.name}}</view>
+        <!-- TODO -->
+        <!-- <view class="organizer"><span class="_infor_head">活动类型：</span>{{actInfo.type.name}}</view> -->
         <view class="organizer"><span class="_infor_head">活动描述：</span>{{actInfo.description == "" ? "无" : actInfo.description}}</view>
-        <view class="organizer"><span class="_infor_head">加入需要审核：</span>{{actInfo.review ? "是": "否"}}</view>
+        <!-- <view class="organizer"><span class="_infor_head">加入需要审核：</span>{{actInfo.review ? "是": "否"}}</view> -->
         <view class="organizer"><span class="_infor_head">平均评分：</span><van-rate custom-class="rate" model:value="{{ avg_score }}" size="{{ 20 }}"/> </view>
       </view>
       <view wx:if="{{isManager}}" slot="footer">
