--- a/pages/my/my-org/my-org.wxss
+++ b/pages/my/my-org/my-org.wxss
@@ -1,12 +1,12 @@
 /* pages/my/my-org/my-org.wxss */
 
-.forum-header {
+/* .forum-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 90rpx;
   padding: 0 30rpx;
-}
+} */
 
 .btn{
   width: 100rpx;
@@ -28,7 +28,7 @@
   height: 50rpx;
 }
 
-.shadow {
+/* .shadow {
   transition: ease-out 200ms;
   box-shadow: 0 0 18rpx rgb(236, 236, 236);
 }
@@ -65,7 +65,6 @@
   display: flex;
   background : white;
   border-bottom: 1px solid #f0f0f0;
-  /* border-bottom: 1px solid #ffffff; */
 }
 
 .auth-content {
@@ -75,4 +74,19 @@
 
 .auth-content text {
   margin-bottom: 30rpx;
+} */
+
+.org-wrap {
+  margin-top: 150rpx
 }
+
+.org-wrap .org-avator {
+  border-radius: 50%;
+  /* width: 40rpx;
+  height: 40rpx; */
+  width: 80rpx;
+  height: 80rpx;
+}
+
+
+
