--- a/pages/sections/act-list/mem-list/mem-list.wxml
+++ b/pages/sections/act-list/mem-list/mem-list.wxml
@@ -16,21 +16,6 @@
   />
 </view>
 
-
-<!-- <van-dialog
-  use-slot
-  title="{{searchResult.name}}"
-  show="{{ showSearchResult }}"
-  show-cancel-button
-  bind:confirm="confirmAdd"
-  bind:close="onClose"
->
-  <image
-    class="avator"
-    src="{{searchResult.avatar}}"
-  />
-</van-dialog> -->
-
 <daddy-dialog
   title="{{searchResult.name}}"
   show="{{ showSearchResult }}"
@@ -39,5 +24,39 @@
   bind:confirmTap="confirm"
   bind:cancelTap="cancel"
 />
+
+<!--成员管理-->
+<!-- <i-panel class="panel" title="管理员列表">
+  <i-cell-group i-class="mem-wrap">
+    <block wx:for="{{memList}}" wx:key="id">
+        <i-cell title="{{item.person.name}}">
+            <image class="mem-avator" src="{{item.person.avatar}}"  slot="icon"></image>
+        </i-cell> 
+    </block>
+  </i-cell-group>
+</i-panel> -->
+
+<view class="mem-wrap">
+  <view class="i-swipeout-demo-title">管理员列表</view>
+  <view class="i-swipeout-demo-des">
+        提示：左滑管理员可以选择移除管理员或者转让负责人
+    </view>
+
+  <block class="mem-item" wx:for="{{memList}}" wx:key="id">
+    <i-swipeout  i-class="i-swipeout-demo-item" actions="{{actions}}"  bindchange="handleSwipeClick">
+      <view slot="content">
+        <view class="i-swipeout-image" style="background:#ff9900;">
+          <image class="mem-avator" src="{{item.person.avatar}}"  slot="icon"></image>
+        </view>
+        <view class="i-swipeout-des">
+          <view class="i-swipeout-des-h2">{{item.person.name}}</view>
+        </view>
+      </view>
+    </i-swipeout>
+  </block>
+</view>
+
+
+
 
 
