--- a/pages/sections/org-list/org-list.wxss
+++ b/pages/sections/org-list/org-list.wxss
@@ -128,6 +128,8 @@
 
 .org-wrap .org-avator {
   border-radius: 50%;
-  width: 40rpx;
-  height: 40rpx;
+  /* width: 40rpx;
+  height: 40rpx; */
+  width: 80rpx;
+  height: 80rpx;
 }
