--- a/pages/sections/act-list/mem-list/mem-list.wxml
+++ b/pages/sections/act-list/mem-list/mem-list.wxml
@@ -6,7 +6,7 @@
     <image class="picture" src="{{orgPicUrl}}"></image>
 </view>
 
-<i-cell-group i-class="act-wrap">
+<!-- <i-cell-group i-class="act-wrap">
   <block wx:for="{{memList}}" wx:key="id">
       <i-cell title="{{item.person.name}}">
         <image class="mem-avatar" src="{{item.person.avatar}}"></image>
@@ -16,7 +16,7 @@
         </block>
       </i-cell> 
   </block>
-</i-cell-group>
+</i-cell-group> -->
 
 <!--添加管理员-->
 <view class="add-manager-wrap">
@@ -55,7 +55,8 @@
     </view>
 
   <block class="mem-item" wx:for="{{memList}}" wx:key="id">
-    <i-swipeout  i-class="i-swipeout-demo-item" actions="{{actions}}"  bindchange="handleSwipeClick">
+    <i-swipeout  i-class="i-swipeout-demo-item" actions="{{actions}}"  bindchange="handleSwipeClick"
+        data-personname="{{item.person.name}}" data-personid="{{item.person.id}}">
       <view slot="content">
         <view class="i-swipeout-image" style="background:#ff9900;">
           <image class="mem-avator" src="{{item.person.avatar}}"  slot="icon"></image>
